Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -388,8 +388,9 @@ Function2 only depends on the standard library.</p>
 <p>There are similar implementations of a function wrapper:</p>
 
 <ul>
-<li><p><a href="https://github.com/pmed/fixed_size_function">pmed/fixed_size_function</a></p></li>
-<li><p><a href="stdex.hpp">stdex::function</a> - A multi-signature function implementation.</p></li>
+<li><a href="https://github.com/pmed/fixed_size_function">pmed/fixed_size_function</a></li>
+<li>
+<a href="stdex.hpp">stdex::function</a> - A multi-signature function implementation.</li>
 <li>multifunction - Example from <a href="http://www.boost.org/doc/html/boost_typeerasure/examples.html#boost_typeerasure.examples.multifunction">Boost.TypeErasure</a>, another multi-signature function.</li>
 <li>std::function - <a href="http://en.cppreference.com/w/cpp/utility/functional/function">Standard</a>.</li>
 <li>boost::function - The one from <a href="http://www.boost.org/doc/libs/1_55_0/doc/html/function.html">Boost</a>.</li>
